Updated object detector

--- a/object_detector_training.ipynb
+++ b/object_detector_training.ipynb
@@ -3,7 +3,35 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Configs and Hyperparamters "
+    "## Custom Object Detector"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# This is done to fix type issue with tensorflow\n",
+    "!pip install numpy==1.17.0\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Constants and Hyper Parameters"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +79,12 @@
     "pipeline_file = MODELS_CONFIG[selected_model]['pipeline_file']\n",
     "\n",
     "# Training batch size fits in Colabe's Tesla K80 GPU memory for selected model.\n",
-    "batch_size = MODELS_CONFIG[selected_model]['batch_size']"
+    "batch_size = MODELS_CONFIG[selected_model]['batch_size']\n",
+    "\n",
+    "# Path to TF Records. These files will be genenrated after some steps.\n",
+    "test_record_fname = '/content/custom-object-detector/data/annotations/test.record'\n",
+    "train_record_fname = '/content/custom-object-detector/data/annotations/train.record'\n",
+    "label_map_pbtxt_fname = '/content/custom-object-detector/data/annotations/label_map.pbtxt'"
    ],
    "metadata": {
     "collapsed": false,
@@ -63,13 +96,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Clone the repo"
+    "#### Clone the project"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -80,9 +110,7 @@
     "import os\n",
     "\n",
     "%cd /content\n",
-    "\n",
     "repo_dir_path = os.path.abspath(os.path.join('.', os.path.basename(repo_url)))\n",
-    "\n",
     "!git clone {repo_url}\n",
     "%cd {repo_dir_path}\n",
     "!git pull"
@@ -97,13 +125,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Install required packages"
+    "#### Installation"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -127,6 +152,440 @@
     "os.environ['PYTHONPATH'] += ':/content/models/research/:/content/models/research/slim/'\n",
     "\n",
     "!python object_detection/builders/model_builder_test.py"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create TF Records"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%cd {repo_dir_path}\n",
+    "!python xml_to_csv.py\n",
+    "\n",
+    "!python generate_tfrecord.py \\\n",
+    "--csv_input=data/annotations/train_labels.csv \\\n",
+    "--output_path=data/annotations/train.record \\\n",
+    "--img_path=data/train \\\n",
+    "--label_map data/annotations/label_map.pbtxt\n",
+    "\n",
+    "\n",
+    "!python generate_tfrecord.py \\\n",
+    "--csv_input=data/annotations/test_labels.csv \\\n",
+    "--output_path=data/annotations/test.record \\\n",
+    "--img_path=data/test \\\n",
+    "--label_map data/annotations/label_map.pbtxt\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Download Pre-Trained models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%cd /content/models/research\n",
+    "\n",
+    "import os\n",
+    "import shutil\n",
+    "import glob\n",
+    "import urllib.request\n",
+    "import tarfile\n",
+    "MODEL_FILE = MODEL + '.tar.gz'\n",
+    "DOWNLOAD_BASE = 'http://download.tensorflow.org/models/object_detection/'\n",
+    "DEST_DIR = '/content/models/research/pretrained_model'\n",
+    "\n",
+    "if not (os.path.exists(MODEL_FILE)):\n",
+    "    urllib.request.urlretrieve(DOWNLOAD_BASE + MODEL_FILE, MODEL_FILE)\n",
+    "\n",
+    "tar = tarfile.open(MODEL_FILE)\n",
+    "tar.extractall()\n",
+    "tar.close()\n",
+    "\n",
+    "os.remove(MODEL_FILE)\n",
+    "if (os.path.exists(DEST_DIR)):\n",
+    "    shutil.rmtree(DEST_DIR)\n",
+    "os.rename(MODEL, DEST_DIR)\n",
+    "\n",
+    "\n",
+    "!echo {DEST_DIR}\n",
+    "!ls -alh {DEST_DIR}\n",
+    "\n",
+    "fine_tune_checkpoint = os.path.join(DEST_DIR, \"model.ckpt\")\n",
+    "fine_tune_checkpoint"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Training Pipeline\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "pipeline_fname = os.path.join('/content/models/research/object_detection/samples/configs/', pipeline_file)\n",
+    "\n",
+    "assert os.path.isfile(pipeline_fname), '`{}` not exist'.format(pipeline_fname)\n",
+    "\n",
+    "def get_num_classes(pbtxt_fname):\n",
+    "    from object_detection.utils import label_map_util\n",
+    "    label_map = label_map_util.load_labelmap(pbtxt_fname)\n",
+    "    categories = label_map_util.convert_label_map_to_categories(\n",
+    "        label_map, max_num_classes=90, use_display_name=True)\n",
+    "    category_index = label_map_util.create_category_index(categories)\n",
+    "    return len(category_index.keys())\n",
+    "\n",
+    "num_classes = get_num_classes(label_map_pbtxt_fname)\n",
+    "with open(pipeline_fname) as f:\n",
+    "    s = f.read()\n",
+    "with open(pipeline_fname, 'w') as f:\n",
+    "    \n",
+    "    # fine_tune_checkpoint\n",
+    "    s = re.sub('fine_tune_checkpoint: \".*?\"',\n",
+    "               'fine_tune_checkpoint: \"{}\"'.format(fine_tune_checkpoint), s)\n",
+    "    \n",
+    "    # tfrecord files train and test.\n",
+    "    s = re.sub(\n",
+    "        '(input_path: \".*?)(train.record)(.*?\")', 'input_path: \"{}\"'.format(train_record_fname), s)\n",
+    "    s = re.sub(\n",
+    "        '(input_path: \".*?)(val.record)(.*?\")', 'input_path: \"{}\"'.format(test_record_fname), s)\n",
+    "\n",
+    "    # label_map_path\n",
+    "    s = re.sub(\n",
+    "        'label_map_path: \".*?\"', 'label_map_path: \"{}\"'.format(label_map_pbtxt_fname), s)\n",
+    "\n",
+    "    # Set training batch_size.\n",
+    "    s = re.sub('batch_size: [0-9]+',\n",
+    "               'batch_size: {}'.format(batch_size), s)\n",
+    "\n",
+    "    # Set training steps, num_steps\n",
+    "    s = re.sub('num_steps: [0-9]+',\n",
+    "               'num_steps: {}'.format(num_steps), s)\n",
+    "    \n",
+    "    # Set number of classes num_classes.\n",
+    "    s = re.sub('num_classes: [0-9]+',\n",
+    "               'num_classes: {}'.format(num_classes), s)\n",
+    "    f.write(s)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Training the Model\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%cd {repo_dir_path}\n",
+    "\n",
+    "model_dir = 'training/'\n",
+    "# Optionally remove content in output model directory to fresh start.\n",
+    "!rm -rf {model_dir}\n",
+    "os.makedirs(model_dir, exist_ok=True)\n",
+    "\n",
+    "!python /content/models/research/object_detection/model_main.py \\\n",
+    "    --pipeline_config_path={pipeline_fname} \\\n",
+    "    --model_dir={model_dir} \\\n",
+    "    --alsologtostderr \\\n",
+    "    --num_train_steps={num_steps} \\\n",
+    "    --num_eval_steps={num_eval_steps}\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Trained Inference Graph\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "\n",
+    "output_directory = './fine_tuned_model'\n",
+    "\n",
+    "lst = os.listdir(model_dir)\n",
+    "lst = [l for l in lst if 'model.ckpt-' in l and '.meta' in l]\n",
+    "steps=np.array([int(re.findall('\\d+', l)[0]) for l in lst])\n",
+    "last_model = lst[steps.argmax()].replace('.meta', '')\n",
+    "\n",
+    "last_model_path = os.path.join(model_dir, last_model)\n",
+    "print(last_model_path)\n",
+    "!python /content/models/research/object_detection/export_inference_graph.py \\\n",
+    "    --input_type=image_tensor \\\n",
+    "    --pipeline_config_path={pipeline_fname} \\\n",
+    "    --output_directory={output_directory} \\\n",
+    "    --trained_checkpoint_prefix={last_model_path}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Download Model and Labels"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "pb_fname = os.path.join(os.path.abspath(output_directory), \"frozen_inference_graph.pb\")\n",
+    "assert os.path.isfile(pb_fname), '`{}` not exist'.format(pb_fname)\n",
+    "\n",
+    "from google.colab import files\n",
+    "files.download(pb_fname)\n",
+    "\n",
+    "from google.colab import files\n",
+    "files.download(label_map_pbtxt_fname)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Testing the Model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "# Path to frozen detection graph. This is the actual model that is used for the object detection.\n",
+    "PATH_TO_CKPT = pb_fname\n",
+    "\n",
+    "# List of the strings that is used to add correct label for each box.\n",
+    "PATH_TO_LABELS = label_map_pbtxt_fname\n",
+    "\n",
+    "# If you want to test the code with your images, just add images files to the PATH_TO_TEST_IMAGES_DIR.\n",
+    "PATH_TO_TEST_IMAGES_DIR =  os.path.join(repo_dir_path, \"data/test\")\n",
+    "\n",
+    "assert os.path.isfile(pb_fname)\n",
+    "assert os.path.isfile(PATH_TO_LABELS)\n",
+    "TEST_IMAGE_PATHS = glob.glob(os.path.join(PATH_TO_TEST_IMAGES_DIR, \"*.jpg\"))\n",
+    "assert len(TEST_IMAGE_PATHS) > 0, 'No image found in `{}`.'.format(PATH_TO_TEST_IMAGES_DIR)\n",
+    "print(TEST_IMAGE_PATHS)\n",
+    "\n",
+    "\n",
+    "%cd /content/models/research/object_detection\n",
+    "\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import six.moves.urllib as urllib\n",
+    "import sys\n",
+    "import tarfile\n",
+    "import tensorflow as tf\n",
+    "import zipfile\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "from io import StringIO\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "\n",
+    "# This is needed since the notebook is stored in the object_detection folder.\n",
+    "sys.path.append(\"..\")\n",
+    "from object_detection.utils import ops as utils_ops\n",
+    "\n",
+    "\n",
+    "# This is needed to display the images.\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "from object_detection.utils import label_map_util\n",
+    "\n",
+    "from object_detection.utils import visualization_utils as vis_util\n",
+    "\n",
+    "\n",
+    "detection_graph = tf.Graph()\n",
+    "with detection_graph.as_default():\n",
+    "    od_graph_def = tf.GraphDef()\n",
+    "    with tf.gfile.GFile(PATH_TO_CKPT, 'rb') as fid:\n",
+    "        serialized_graph = fid.read()\n",
+    "        od_graph_def.ParseFromString(serialized_graph)\n",
+    "        tf.import_graph_def(od_graph_def, name='')\n",
+    "\n",
+    "\n",
+    "label_map = label_map_util.load_labelmap(PATH_TO_LABELS)\n",
+    "categories = label_map_util.convert_label_map_to_categories(\n",
+    "    label_map, max_num_classes=num_classes, use_display_name=True)\n",
+    "category_index = label_map_util.create_category_index(categories)\n",
+    "\n",
+    "\n",
+    "def load_image_into_numpy_array(image):\n",
+    "    (im_width, im_height) = image.size\n",
+    "    return np.array(image.getdata()).reshape(\n",
+    "        (im_height, im_width, 3)).astype(np.uint8)\n",
+    "\n",
+    "# Size, in inches, of the output images.\n",
+    "IMAGE_SIZE = (12, 8)\n",
+    "\n",
+    "\n",
+    "def run_inference_for_single_image(image, graph):\n",
+    "    with graph.as_default():\n",
+    "        with tf.Session() as sess:\n",
+    "            # Get handles to input and output tensors\n",
+    "            ops = tf.get_default_graph().get_operations()\n",
+    "            all_tensor_names = {\n",
+    "                output.name for op in ops for output in op.outputs}\n",
+    "            tensor_dict = {}\n",
+    "            for key in [\n",
+    "                'num_detections', 'detection_boxes', 'detection_scores',\n",
+    "                'detection_classes', 'detection_masks'\n",
+    "            ]:\n",
+    "                tensor_name = key + ':0'\n",
+    "                if tensor_name in all_tensor_names:\n",
+    "                    tensor_dict[key] = tf.get_default_graph().get_tensor_by_name(\n",
+    "                        tensor_name)\n",
+    "            if 'detection_masks' in tensor_dict:\n",
+    "                # The following processing is only for single image\n",
+    "                detection_boxes = tf.squeeze(\n",
+    "                    tensor_dict['detection_boxes'], [0])\n",
+    "                detection_masks = tf.squeeze(\n",
+    "                    tensor_dict['detection_masks'], [0])\n",
+    "                # Reframe is required to translate mask from box coordinates to image coordinates and fit the image size.\n",
+    "                real_num_detection = tf.cast(\n",
+    "                    tensor_dict['num_detections'][0], tf.int32)\n",
+    "                detection_boxes = tf.slice(detection_boxes, [0, 0], [\n",
+    "                                           real_num_detection, -1])\n",
+    "                detection_masks = tf.slice(detection_masks, [0, 0, 0], [\n",
+    "                                           real_num_detection, -1, -1])\n",
+    "                detection_masks_reframed = utils_ops.reframe_box_masks_to_image_masks(\n",
+    "                    detection_masks, detection_boxes, image.shape[0], image.shape[1])\n",
+    "                detection_masks_reframed = tf.cast(\n",
+    "                    tf.greater(detection_masks_reframed, 0.5), tf.uint8)\n",
+    "                # Follow the convention by adding back the batch dimension\n",
+    "                tensor_dict['detection_masks'] = tf.expand_dims(\n",
+    "                    detection_masks_reframed, 0)\n",
+    "            image_tensor = tf.get_default_graph().get_tensor_by_name('image_tensor:0')\n",
+    "\n",
+    "            # Run inference\n",
+    "            output_dict = sess.run(tensor_dict,\n",
+    "                                   feed_dict={image_tensor: np.expand_dims(image, 0)})\n",
+    "\n",
+    "            # all outputs are float32 numpy arrays, so convert types as appropriate\n",
+    "            output_dict['num_detections'] = int(\n",
+    "                output_dict['num_detections'][0])\n",
+    "            output_dict['detection_classes'] = output_dict[\n",
+    "                'detection_classes'][0].astype(np.uint8)\n",
+    "            output_dict['detection_boxes'] = output_dict['detection_boxes'][0]\n",
+    "            output_dict['detection_scores'] = output_dict['detection_scores'][0]\n",
+    "            if 'detection_masks' in output_dict:\n",
+    "                output_dict['detection_masks'] = output_dict['detection_masks'][0]\n",
+    "    return output_dict\n",
+    "\n",
+    "\n",
+    "for image_path in TEST_IMAGE_PATHS:\n",
+    "    image = Image.open(image_path)\n",
+    "    # the array based representation of the image will be used later in order to prepare the\n",
+    "    # result image with boxes and labels on it.\n",
+    "    image_np = load_image_into_numpy_array(image)\n",
+    "    # Expand dimensions since the model expects images to have shape: [1, None, None, 3]\n",
+    "    image_np_expanded = np.expand_dims(image_np, axis=0)\n",
+    "    # Actual detection.\n",
+    "    output_dict = run_inference_for_single_image(image_np, detection_graph)\n",
+    "    # Visualization of the results of a detection.\n",
+    "    vis_util.visualize_boxes_and_labels_on_image_array(\n",
+    "        image_np,\n",
+    "        output_dict['detection_boxes'],\n",
+    "        output_dict['detection_classes'],\n",
+    "        output_dict['detection_scores'],\n",
+    "        category_index,\n",
+    "        instance_masks=output_dict.get('detection_masks'),\n",
+    "        use_normalized_coordinates=True,\n",
+    "        line_thickness=8)\n",
+    "    plt.figure(figsize=IMAGE_SIZE)\n",
+    "    plt.imshow(image_np)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
