Updated object detector

--- a/object_detector_training.ipynb
+++ b/object_detector_training.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Custom Object Detector"
+    "## Custom Object Detector\n",
+    "The notebook has the code required to train a model for object detection. "
    ],
    "metadata": {
     "collapsed": false,
@@ -163,7 +164,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Create TF Records"
+    "#### Create TF Records"
    ],
    "metadata": {
     "collapsed": false
@@ -201,7 +202,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Download Pre-Trained models"
+    "#### Download Pre-Trained models"
    ],
    "metadata": {
     "collapsed": false
@@ -252,7 +253,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training Pipeline\n"
+    "#### Training Pipeline"
    ],
    "metadata": {
     "collapsed": false
@@ -320,7 +321,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training the Model\n"
+    "#### Training the Model"
    ],
    "metadata": {
     "collapsed": false
@@ -356,7 +357,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Trained Inference Graph\n"
+    "#### Trained Inference Graph"
    ],
    "metadata": {
     "collapsed": false
@@ -395,7 +396,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Download Model and Labels"
+    "#### Download Model and Labels"
    ],
    "metadata": {
     "collapsed": false
@@ -427,7 +428,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Testing the Model"
+    "#### Testing the Model"
    ],
    "metadata": {
     "collapsed": false
